<resources>

    <string name="app_name">大家帮</string>
    
    
    <string name="login_edittext_username">账号</string>
    <string name="login_edittext_password">密码</string>
    <string name="login_edittext_password_again">确认密码</string>
    <string name="login_checkbox_remember">记住密码</string>
    <string name="login_button_renrne">登录</string>
    <string name="login_button_register">注册</string>
    
    <string name="register_edittext_email">输入邮箱</string>  
    <string name="register_edittext_password">输入密码</string>
    <string name="register_edittext_password_again">确认密码</string>  
    <string name="register_button_next">下一步</string>
    
    <string name="register_next_edittext_nickname">输入昵称</string>
    <string name="register_next_text_photo">点击图片上传头像</string>
    <string name="register_next_button_ok">完成</string>
    <string name="register_next_button_jump">跳过</string>
    <string name="register_next_menu_photo">相册</string>
    <string name="register_next_menu_cam">拍照</string>
    
    <string name="register_toast_empty">输入不能为空！</string>
    <string name="register_toast_emailerror">email格式错误！</string>
    <string name="register_toast_error">密码输入不一致！</string>
     <string name="register_toast_cardfull">储存卡已满</string>
     
     <string name="waitingDialog">请稍后。。。</string>
     <string name="registerSuccess">注册成功</string>
     <string name="registerFaild">注册失败</string>
     
     <string name="loginSuccess">登录成功</string>
      <string name="loginFail">登录名或密码错误</string>
      
      <string name = "userFileName">STROEUSER</string>

</resources>
