<?xml version="1.0" encoding="utf-8"?>

    
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:padding="20dp"
		android:background="#fff"
        >
        
        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/backl"/>
        
        
        <RelativeLayout 
            android:id="@+id/register_area_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            >
            
              
            <LinearLayout 
            android:id="@+id/register_area_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            >
            
            <ImageView 
                android:id="@+id/register_image_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/login_email"/>
            <EditText
                android:id="@+id/register_edittext_email"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:background="@drawable/login_edittext"
                android:hint="@string/register_edittext_email"/>
            
            </LinearLayout>
        
        
            <LinearLayout 
            android:id="@+id/register_area_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/register_area_email"
            >
            
                <ImageView 
                android:id="@+id/register_image_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/login_password"/>
                <EditText
                android:id="@+id/register_edittext_password"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:background="@drawable/login_edittext"
                android:inputType="textPassword"
                android:hint="@string/register_edittext_password"/>
            
            </LinearLayout>
            
            <LinearLayout 
            android:id="@+id/register_area_password_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/register_area_password"
            >
            
                <ImageView 
                android:id="@+id/register_image_password_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/login_password"/>
                <EditText
                android:id="@+id/register_edittext_password_again"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:background="@drawable/login_edittext"
                android:inputType="textPassword"
                android:hint="@string/register_edittext_password_again"/>
            
            </LinearLayout>
            
            

            
            
  <!--          
            <cn.edu.sdu.online.view.SlidButton
                android:id="@+id/register_button_sex"
                android:layout_width="92dp"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:layout_below="@+id/register_area_password_again"/>
  --> 
            
            
        </RelativeLayout>
        
        
            <Spinner
            android:id="@+id/register_spinner_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/register_spinner"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/register_area_input"
             />
            
        <Button 
            android:id="@+id/register_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_button_next"
            android:layout_centerHorizontal="true"

            android:textColor="#fff"
            android:textSize="20sp"
            android:background="@drawable/button_login"
            android:layout_marginTop="40dp"
            android:layout_below="@+id/register_spinner_sex"/>
        
   
         
    </RelativeLayout>
    
    
    
    

